Fixed cards being not centered

--- a/flipsheets.css
+++ b/flipsheets.css
@@ -86,8 +86,7 @@ h2 {
 
 #thrc, .thrc {
     margin: 0px auto;
-    display: flex;
-    justify-content: center;
+    display: inline-block;
 }
 
 #thrc2 {
@@ -112,5 +111,49 @@ h2 {
 }
 
 #thrc, .thrc {
-    justify-content: left;
+    position: relative;
+    left: 0%;
+    width: 100vw;
+}
+
+.ca {
+    /*width: 20vw !important;
+    heigth: 20vw !important;
+    overflow: hidden;*/
+}
+
+.flip-card {
+	position: relative;
+	display: inline-block;
+	width: 300px;
+	height: 300px;
+}
+
+.flip-card-inner > * {
+	display: inline-block;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.flip-card:hover .flip-card-inner {
+	transform: rotateY(180deg);
+}
+
+.flip-card-back {
+	transform: translate(-50%,-50%) rotateY(180deg);
+}
+
+.flip-card-front {
+	width: 100%;
+	height: 100%;
+}
+
+.flip-card-front img {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	width: 100%;
+	height: auto;
 }
